--- a/html/validation.html
+++ b/html/validation.html
@@ -7,8 +7,14 @@
 </head>
 <body>
     <h2>ENTER PASSWORD</h2>
- <input type="text" id="input"><button id="button">submit</button>
+ <input type="text" id="input" class="but"oninput="validateInpiut()"><button id="button">submit</button>
  <p id="par"></p>
+ <style>
+    .but{
+        border: crimson;
+    }
+
+ </style>
 
     <script src="../html/js/validation.js"></script>
 </body>
